crates/rudolint-cli/tests/snapshots/cli__stdin_filename_json_findings.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: normalized_json(&output)
---
[
  {
    "code": "RDL3007",
    "column": 1,
    "line": 1,
    "message": "avoid mutable latest base image tags",
    "path": "Dockerfile.custom",
    "severity": "warning"
  },
  {
    "code": "RDL3000",
    "column": 1,
    "line": 2,
    "message": "WORKDIR should be absolute",
    "path": "Dockerfile.custom",
    "severity": "error"
  }
]
