crates/rudolint-cli/tests/snapshots/cli__stdin_human_show_source.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: output
---
<stdin>:1:1: warning RDL3007 avoid mutable latest base image tags
<stdin>:2:1: error RDL3000 WORKDIR should be absolute
  |
  1 | FROM alpine:latest
  | ^
  |
  2 | WORKDIR app
  | ^
