crates/rudolint-cli/tests/snapshots/cli__stdin_json_findings.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: normalized_json(&output)
---
{
  "findings": [
    {
      "code": "DL3007",
      "help": null,
      "labels": [],
      "message": "avoid mutable latest base image tags",
      "path": "<stdin>",
      "primary_span": {
        "end_byte": 18,
        "end_column": 19,
        "end_line": 1,
        "start_byte": 0,
        "start_column": 1,
        "start_line": 1
      },
      "severity": "warning"
    },
    {
      "code": "DL3000",
      "help": null,
      "labels": [],
      "message": "WORKDIR should be absolute",
      "path": "<stdin>",
      "primary_span": {
        "end_byte": 30,
        "end_column": 12,
        "end_line": 2,
        "start_byte": 19,
        "start_column": 1,
        "start_line": 2
      },
      "severity": "error"
    }
  ],
  "schemaVersion": "v1"
}
