crates/rudolint-cli/tests/snapshots/cli__stdin_sarif_source_spans.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: normalized_json(&output)
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "<stdin>"
                },
                "region": {
                  "endColumn": 19,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1
                }
              }
            }
          ],
          "message": {
            "text": "avoid mutable latest base image tags"
          },
          "ruleId": "RDL3007"
        },
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "<stdin>"
                },
                "region": {
                  "endColumn": 12,
                  "endLine": 2,
                  "startColumn": 1,
                  "startLine": 2
                }
              }
            }
          ],
          "message": {
            "text": "WORKDIR should be absolute"
          },
          "ruleId": "RDL3000"
        }
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/kubeply/rudolint",
          "name": "rudolint",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "warning"
              },
              "id": "RDL3007",
              "shortDescription": {
                "text": "avoid mutable latest base image tags"
              }
            },
            {
              "defaultConfiguration": {
                "level": "error"
              },
              "id": "RDL3000",
              "shortDescription": {
                "text": "WORKDIR should be absolute"
              }
            }
          ]
        }
      }
    }
  ],
  "version": "2.1.0"
}
