crates/rudolint-cli/tests/snapshots/cli__version_json.snap
---
source: crates/rudolint-cli/tests/cli.rs
expression: normalized_json(&output)
---
{
  "name": "rudolint",
  "version": "0.1.0"
}
